# aphasiaFriendly

./: .envrc  .gitignore  Dockerfile  Justfile  Procfile  README.md  af  dev.fly.toml  evaluate_summary.py  fly.toml  generate_dotenv.py  input.txt  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: deploy.yml  dev-deploy.yml  lint.yml
inputs/: Assaneo_Nat_Neurosci_2019.pdf.txt  Banerjee_Vallentin_Curr_Op_Neuro_2022.pdf.txt  Geva2011_aphasiology_behaviour_(2).pdf.txt  Hamilton_et_al._-_2021_-_Parallel_and_distributed_encoding_of_speech_across.pdf.txt  Jarvis_Science_2019.pdf.txt  fonc-11-748229.pdf.txt
outputs/input/: summary.html  summary.md
playground/: Justfile  README.md  poetry.toml  pyproject.toml
playground/src/: __main__.py
playground/src/playground/: __init__.py
prototype/: .gitignore  README.md  abstract.txt  pyproject.toml  summarize  summary.json
prototype/af_prototype/: __main__.py  api_access.py  config.py  fuzzy_finding.py  icon_req.py  logger.py  nounproject.py  prompts.py
readable-af/: .dockerignore  .gitignore  Dockerfile  README.md  deploy  devserver  pyproject.toml  requirements.txt  rerun_all.sh  run_all.sh
readable-af/inputs/: Agrammatism_and_Paragrammatism_A_Cortical_Double_D.pdf.txt  Caplan_et_al._-_1995_-_Analysis_of_lesions_by_MRI_in_stroke_patients_with.pdf.txt  Caplan_et_al._-_2008_-_Syntactic_and_thematic_constraint_effects_on_blood.pdf.txt  Fischer_Curr_Dir_2021.pdf.txt  Fridriksson_Hillis.pdf.txt  Peelle_-_2018_-_Listening_Effort_How_the_Cognitive_Consequences_o.pdf.txt  Varkanitsa_et_al._-_2020_-_White_Matter_Hyperintensities_Predict_Response_to_.pdf.txt  [19330693_-_Journal_of_Neurosurgery]_Transient_aphasias_after_left_hemisphere_resective_surgery_(4).pdf.txt  acs.jcim.5b00206.pdf.txt  cytoarch.txt  flm2_05.pdf.txt
readable-af/readable_af/: api.py  cli.py  config.py  logger.py  rest.py
readable-af/readable_af/model/: request.py  summary.py
readable-af/readable_af/output/: __init__.py  gdocs.py  pptx.py  yaml.py
readable-af/readable_af/processing/: generation.py  summarization.py  text_extraction.py
readable-af/readable_af/templates/: index.html  rate_limit.html
readable-af/readable_af/templates/samples/: Diehl_et_al._-_2004_-_Speech_Perception.pdf.txt  Emmorey_Lee_LLC_2021.pdf.txt  Fedorenko_Varley_ANYAS_2016.pdf.txt  Hamilton_et_al._-_2011_-_Mechanisms_of_aphasia_recovery_after_stroke_and_th.pdf.txt  Hamilton_et_al._-_2018_-_A_Spatial_Map_of_Onset_and_Sustained_Responses_to_.pdf.txt  Morphological_Description_of_Frontal_EEG_Intericta.pdf.txt  kasdan.txt
readable_af/: cli.py  config.py  rest.py
readable_af/model/: request.py
readable_af/output/: gdocs.py  html.py  pptx.py  yaml.py
readable_af/processing/: generation.py  summarization.py
readable_af/static/css/: styles.css
readable_af/templates/: auth.html.j2  index.html.j2  layout.html.j2  result.html.j2  summarize.html.j2
readable_af/templates/samples/: Agyemang_et_al._-_2023_-_Two_cases_of_SMA_syndrome_after_neurosurgical_inju.pdf.txt  Benichov_Curr_Biol_2016.pdf.txt  Caplan_and_Dapretto_-_2001_-_Making_sense_during_conversation_An_fMRI_study.pdf.txt  Caplan_and_Waters_-_1998_-_Verbal_working_memory_and_sentence_comprehension.pdf.txt  Vernes_Phil_Trans_B_2021.pdf.txt  annurev-linguistics-011817-045748_(1).pdf.txt  archneur_43_10_017_(3).pdf.txt
src/readable_af/: cli.py  config.py  errors.py  rest.py
src/readable_af/model/: intermediate.py  request.py  summary.py
src/readable_af/output/: __init__.py  gdocs.py  html.py  pptx.py  yaml.py
src/readable_af/processing/: generation.py  summarization.py  text_extraction.py
utils/: generate_dotenv.py
(+4 files in other folders)
