[project]
name = "readable-af"
version = "0.1.0"
description = "Make aphasia friendly versions of scientific papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "flask>=3.1.2",
"flask-limiter>=3.13",
    "gunicorn>=23.0.0",
    "openai>=1.108.1",
    "pypdf>=6.1.0",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "setuptools>=80.9.0",
    "google-api-python-client>=2.182.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]

[project.scripts]
af = "readable_af.cli:cli"
server = "readable_af.rest:app"

[tool.uv]
package = true
