[tool.poetry]
name = "af-prototype"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
click = "^8.1.7"
textract = "^1.6.5"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
summarize = "af_prototype.__main__:summarize"
extract = "af_prototype.__main__:extract_sections"
