[tool.poetry]
name = "readable-af"
version = "0.1.0"
description = "Make aphasia friendly versions of scientific papers"
authors = ["Isaac Pedisich <readable@isaacped.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
openai = "^1.3.3"
textract = "^1.6.5"
requests-oauthlib = "^1.3.1"
requests = "^2.31.0"
setuptools = "^68.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
af = "readable_af.cli:cli"
