[tool.poetry]
name = "readable-af"
version = "0.1.0"
description = "Make aphasia friendly versions of scientific papers"
authors = ["Isaac Pedisich <readable@isaacped.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
openai = "^1.3.3"
requests-oauthlib = "^1.3.1"
requests = "^2.31.0"
setuptools = "^68.2.2"
pyyaml = "^6.0.1"
pypdf = "^3.17.4"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"


[tool.poetry.group.deployment.dependencies]
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
af = "readable_af.cli:cli"
server = "readable_af.rest:app"
